[gd_scene load_steps=2 format=3 uid="uid://bela8ivbqbepi"]

[ext_resource type="Script" path="res://ai/components/avoidance_map.gd" id="1_8cltq"]

[node name="AvoidanceMap" type="Node2D"]
script = ExtResource("1_8cltq")
tick_rate = 0.05

[node name="up" type="RayCast2D" parent="."]
target_position = Vector2(0, -16)

[node name="up_right" type="RayCast2D" parent="."]
target_position = Vector2(12, -12)

[node name="right" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)

[node name="down_right" type="RayCast2D" parent="."]
target_position = Vector2(12, 12)

[node name="down" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)

[node name="down_left" type="RayCast2D" parent="."]
target_position = Vector2(-12, 12)

[node name="left" type="RayCast2D" parent="."]
target_position = Vector2(-16, 0)

[node name="up_left" type="RayCast2D" parent="."]
target_position = Vector2(-12, -12)

[node name="CheckRate" type="Timer" parent="."]

[connection signal="timeout" from="CheckRate" to="." method="_on_check_rate_timeout"]
